[package]
edition = "2021"
name = "region-restriction-checker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
actix-web = "4.5.1"
lazy_static = "1.4.0"
redis = { version = "0.24.0", default-features = false, features = ["tokio-comp", "connection-manager"] }
regex = "1.10.3"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls", "gzip", "json", "socks"] }
serde = {version = "1.0.196", default-features = false, features = ["derive"]}
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
