[package]
edition = "2021"
name = "region-restriction-checker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
actix-web = "4.5.1"
lazy_static = "1.4.0"
redis = { version = "0.25.3", default-features = false, features = ["tokio-comp", "connection-manager"] }
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "gzip", "json", "socks"] }
serde = {version = "1.0.199", default-features = false, features = ["derive"]}
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
